# neural-client

./: .gitignore  Cargo.toml  README.md  neural-mail.db
src/: App.css  App.tsx  ai.rs  auth.rs  db.rs  index.css  mail.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  auth.rs  mail.rs  main.rs
ui/: app.slint
