[package]
name = "neural-mail"
version = "0.1.0"
edition = "2021"

[build-dependencies]
slint-build = "1.9"

[dependencies]
slint = "1.9"
imap = "2.4.1"
lettre = "0.11"
keyring = "2.3"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
native-tls = "0.2"
rusqlite = { version = "0.29", features = ["bundled"] }
