[package]
name = "neural-mail"
version = "0.1.0"
edition = "2021"

[build-dependencies]
slint-build = "1.9.0"

[dependencies]
slint = "1.9.0"
imap = "2.4.1"
lettre = "0.11.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
native-tls = "0.2.11"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.10.0"
chrono = "0.4.34"
rfd = "0.12.1"
dotenvy = "0.15.7"
email_address = "0.2.4"
regex = "1.10.3"
bcrypt = "0.15.0"
